# project6

./: .gitignore  README.md  pyproject.toml
data/processed/: survey_lung_cancer_clean.csv  survey_lung_cancer_features.parquet
data/raw/: Lung Cancer - Dataset.csv  Patient_Lung_Cancer_Dataset.csv  README.md  Risks_Factors_Lung_Cancer_Dataset.csv  survey_lung_cancer.csv
mlflow/: Dockerfile_mlflow  README.md  docker-compose.yml  requirements.txt
notebooks/: 00-preparation.ipynb  01-exploration.ipynb  02-features.ipynb  03-Modeling.ipynb  utils_mlflow.ipynb
src/: __init__.py  constantes.py  utils_mlflow.py
src/models/: modelization.py  seuil.py
src/visualization/: __init__.py  visu.py  visu_text.py
