[project]
name = "project6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imblearn>=0.0",
    "ipykernel==6.30.1",
    "ipython==9.6.0",
    "ipywidgets==8.1.7",
    "lightgbm==4.6.0",
    "matplotlib==3.10.7",
    "mlflow==3.4.0",
    "numpy==2.3.4",
    "pandas==2.3.3",
    "psycopg2-binary==2.9.11",
    "scikit-learn==1.7.2",
    "seaborn==0.13.2",
    "shap==0.48.0",
    "xgboost==3.0.5",
]

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",
    "W503",
    "E402",
    "E501",
]
exclude = [
    ".git",
    "__pycache__",
    ".venv", 
    "venv",
    ".jupyter",
    "alembic/versions",
    "migrations",
]
per-file-ignores = [
    "*.ipynb:E402",
    "alembic/*:E402,F401",
]
